# deepear

./: .env.example  .gitignore  README.md  README_CN.md  main.py  pyproject.toml  vercel.json
.github/workflows/: lite-cron.yml
assets/examples/: demo_report.html
dashboard/: server.py
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/public/: latest.json
dashboard/frontend/src/: LiteChartPage.tsx  LiteDashboard.css  LiteDashboard.tsx  analytics.ts  main.tsx  store.ts
dashboard/frontend/src/components/: FeedbackButton.tsx  ISQRadar.tsx  PhaseIndicator.css  PhaseIndicator.tsx  ReportRenderer.css  ReportRenderer.tsx  SignalCard.css  SignalCard.tsx
docs/: guide.md
scripts/: minisite_generate.py
src/: main_flow.py
src/agents/: fin_agent.py  forecast_agent.py  intent_agent.py  report_agent.py  trend_agent.py
src/utils/: kronos_predictor.py  search_tools.py  sentiment_tools.py  stock_tools.py
src/utils/llm/: capability.py
src/utils/predictor/: training.py
