[project]
name = "DeepEar"
version = "0.1.0"
description = "An extensible, open-source framework for extracting financial signals from news and social media."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.21",
    "akshare>=1.18.3",
    "baidusearch>=1.0.3",
    "ddgs>=9.10.0",
    "einops>=0.8.1",
    "huggingface-hub>=0.36.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "markdown>=3.10",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pycountry>=24.6.1",
    "pyecharts>=2.0.9",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "yfinance>=1.2.0",
]
